modifying style search input

--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,7 @@
                                 </nav>
                             </div>
                         </div>
-                        <div class="col-md-8 col-lg-8">
+                        <div class="col-md-8 col-lg-8 pl-0">
                             <div class="ep-content-center">
                                 <h2><b>Repository Kemendikbud</b></h2>
                                 <h4 class="ep">Welcome to Repositori Institusi Kementerian Pendidikan dan Kebudayaan</h4>
@@ -145,7 +145,7 @@
                                 <div class="ep-searchbox">
                                     <div class="epm-searchbox_kemdikbud">
                                         <form method="get" accept-charset="utf-8" action="" style="display:inline" role="search" aria-label="Publication simple search">
-                                        <div id="search_box" class="col-md-offset-0 col-md-10 col-sm-10 col-xs-9">
+                                        <div id="search_box" class="col-md-offset-0 col-md-10 col-sm-10 col-xs-9 p-0">
                                             <input type="search" placeholder="Search the repository" class="ep_tm_searchbarbox epm-form-input" name="q" aria-labelledby="searchbutton">
                                         </div>
                                         <div class="col-md-2 col-sm-2 col-xs-3">
