fix latest additions

--- a/src/index.html
+++ b/src/index.html
@@ -115,13 +115,13 @@
                                         <li><a href="/index.html">home</a></li>
                                         <li><a href="/about.html">about</a></li>
                                         <li>
-                                        <span class="opener">Browse</span>
-                                        <ul>
-                                            <li><a href="">browse by years</a></li>
-                                            <li><a href="">browse by subjects</a></li>
-                                            <li><a href="">browse by divisions</a></li>
-                                            <li><a href="">browse by authors</a></li>
-                                        </ul>
+                                            <span class="opener">Browse</span>
+                                            <ul>
+                                                <li><a href="">browse by years</a></li>
+                                                <li><a href="">browse by subjects</a></li>
+                                                <li><a href="">browse by divisions</a></li>
+                                                <li><a href="">browse by authors</a></li>
+                                            </ul>
                                         </li>
                                         <li><a href="/help.html">Help</a></li>
                                         <li><a href="/policies.html">Policies</a></li>
@@ -160,12 +160,12 @@
                                 </div>
                                 <div class="ep-content-latest-addition">
                                     <div class="front_block row no-gutter" id="latest_additions_block">
-                                        <h2>
-                                            Latest additions
-                                            <span class="ep_search_feed">
-                                                <a href="/cgi/latest_tool?output=RSS2" aria-label="Latest additions RSS Feed"><i aria-hidden="true" class="fa fa-rss fa-fw"></i></a>
-                                            </span>
-                                        </h2>
+                                        <span class="ep_search_feed">
+                                            <h2> Latest additions</h2>
+                                            <a class="ep_search_feed__icons" href="/cgi/latest_tool?output=RSS2" aria-label="Latest additions RSS Feed">
+                                                <img src="/assets/icon/rss-large.svg" alt="img-rss-feed"/>
+                                            </a>
+                                        </span>
                                         <div id="fplatest">
                                             <table class="ep_latest_tool_list">
                                                 <tbody>
