development style and login area

--- a/src/help.html
+++ b/src/help.html
@@ -132,7 +132,7 @@
                         </div>
                         <div class="col-md-8 col-lg-8 pl-0">
                             <div class="ep-content-center">
-                                <h2 class="text-center">
+                                <h2 class="ep-heading__help text-center">
                                     <b>Repositori Institusi Kementerian Pendidikan dan Kebudayaan Republik Indonesia</b>
                                 </h2>
                             </div>
