--- a/src/policies.html
+++ b/src/policies.html
@@ -132,7 +132,7 @@
                         </div>
                         <div class="col-md-8 col-lg-8 p-0">
                             <div class="ep-content-center">
-                                <h2 class="text-center"><b>Repositori Institusi Kementerian Pendidikan dan Kebudayaan User Documentation</b></h2>
+                                <h2 class="ep-heading__policies text-center"><b>Repositori Institusi Kementerian Pendidikan dan Kebudayaan User Documentation</b></h2>
                                 <p class="ep-intro__repository">Repositori Institusi Kementerian Pendidikan dan Kebudayaan User Documentation
                                     Browsing
                                     Searching
