modifiy site cgi rel

--- a/src/index.html
+++ b/src/index.html
@@ -228,7 +228,7 @@
                                         </div>
                                         <div>
                                             <p>
-                                                <a href="http://repository.essex.ac.uk/cgi/latest_tool">Further recent additions</a>
+                                                <a href="http://repositori.kemdikbud.cgi/latest_tool">Further recent additions</a>
                                             </p>
                                         </div>
                                     </div>
