change footer open doar and google schollarship

--- a/src/help.html
+++ b/src/help.html
@@ -51,7 +51,7 @@
                             </header>
                             <div class="header-slider-banner">
                                 <div class="banners-app">
-
+                                    <div id="share"></div>
                                 </div>
                             </div>
                         </div>
