--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no" />
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     </head>
 
     <body>
@@ -62,6 +62,7 @@
                 <div class="ep-login-action">
                     <a href="/login.html" class="ep-button-login">Login</a>
                 </div>
+                <div id="share-social-all"></div>
 
                 <div class="ep-content-main">
                     <div class="row">
@@ -260,7 +261,18 @@
                 <!-- footer -->
                 <div class="row">
                     <div class="ep-footer-app col-md-12 col-lg-12">
-                        <div class="epm-authority ">
+                        <div class="ep-authority">
+                            <div class="ep-toolsbox">
+                                <a title="ios" href="http://onesearch.id/Search/Results?filter[]=repoId:IOS3803" target="_blank">
+                                    <img src="https://journal.ugm.ac.id/public/site/images/admin/index/onesearch.png" alt="Indonesia One Search" width="113" height="auto">
+                                </a>
+                                <a title="GS" href="https://scholar.google.co.id/citations?user=BKQ9E80AAAAJ&amp;hl=id" target="_blank">
+                                    <img src="https://journal.ugm.ac.id/public/site/images/admin/index/googlescholarwarning.png" alt="Google Scholar" width="113" height="auto"></a>
+                                    <br>
+                                    <a href="http://v2.sherpa.ac.uk/id/repository/3865">OpenDOAR</a>
+                                    <a href="http://roar.eprints.org/12433/">ROAR</a>
+                            </div>
+                            <div class="ep-information-indexer">Repository has been indexed in some indexers.</div>
                             <span> @Copyright by Perpustakaan Kemendikbud All rights reserved.</span>
                             <p>This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License.</p>
                         </div>
